--- a/main.css
+++ b/main.css
@@ -24,7 +24,9 @@
   background-color: #FF8D74;
   color: white;
 }
-.box{
+.raiden-shogun{
   background-color:#be95ff
   color:black;
+  width:100%;
+  padding-top:50%;
 }
