--- a/main.css
+++ b/main.css
@@ -25,8 +25,9 @@
   color: white;
 }
 .raiden-shogun{
-  background-color:#be95ff
+  background-color:#be95ff;
   color:black;
   width:100%;
   padding-top:50%;
+  background-image:"https://faliouca.github.io/raiden%20hehe.webp";
 }
