--- a/main.css
+++ b/main.css
@@ -24,9 +24,9 @@
   background-color: #FF8D74;
   color: white;
 }
-.raiden-shogun{
+.raidenshogun{
   background-color:#be95ff;
-  color:black;
+  color:white;
   width:100%;
   padding-top:50%;
   background-image:"https://faliouca.github.io/raiden%20hehe.webp";
