--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@
   overflow:hidden;
   padding-top:5px;
   padding-bottom:5px;
+  padding-right:5px;
   width:100%;
 }
 .topnav a {
@@ -33,4 +34,22 @@
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover;
+}
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
