--- a/main.css
+++ b/main.css
@@ -43,10 +43,11 @@
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  padding: 12px 16px;
+  background-color: #ffc6c6;
+  top:47px;
+  color:black;
+  min-width: 100px;
+  padding: 15px 15px;
   z-index: 1;
 }
 
