--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 .topnav{
   background-color:#FF8D74;
   color:#FFF;
-  overflow:hidden;
+  overflow:visible;
   padding-top:5px;
   padding-bottom:5px;
   padding-right:5px;
