--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
   overflow:visible;
   padding-top:5px;
   padding-bottom:5px;
-  padding-right:5px;
+  padding-left:5px;
   width:100%;
 }
 .topnav a {
